Spacing fix, ordering sections

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -116,6 +116,11 @@ body {
     color: #828282;
 }
 
+#my-experience .card>h1,
+p {
+    margin-bottom: 0;
+}
+
 /*
 Media Queries
 xs: 0,
